# archeon

./: .aider.conf.yml  .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  ARCHEON.index.json  README.md  REFACTORING.md  TASKS.md  opencode.json  pyproject.toml  setup-wiki.sh
.github/: copilot-instructions.md
archeon/: ARCHEON.arcon  ARCHEON.index.json  __main__.py  cli_helpers.py  cli_templates.py  main.py
archeon/agents/: API_agent.py  CMP_agent.py  EVT_agent.py  FNC_agent.py  MDL_agent.py  STO_agent.py  __init__.py  base_agent.py
archeon/architectures/: __init__.py  _schema.json  nextjs-capacitor.shape.json  nextjs-daisyui-express.shape.json  nextjs-express.shape.json  nextjs-fastapi.shape.json  nextjs-tauri.shape.json  react-electron.shape.json  react-fastapi.shape.json  solidjs-kiss.shape.json  vanilla-html-js.shape.json  vue3-capacitor.shape.json  vue3-fastapi.shape.json
archeon/config/: __init__.py  legend.py
archeon/orchestrator/: CTX_context.py  GRF_exporter.py  GRF_graph.py  HED_executor.py  IDX_classifier.py  IDX_index.py  IDX_inferrer.py  IDX_orchestrator.py  INT_intent.py  MIC_micro.py  PRS_parser.py  SCN_scanner.py  SHP_shape.py  SPW_spawner.py  TKN_tokens.py  (+3 more)
docs/: LINKEDIN_POST.md  LINKEDIN_POST_v2.md  MEDIUM_POST.md  MEDIUM_POST_v2.md  MEDIUM_POST_v3.md  MEDIUM_POST_v4.md  TECHNICAL_DESIGN.md
ref/: arch.md
wiki/: Architecture-Shapes.md  Architecture.md  CLI-Commands.md  Chain-Syntax.md  Glyph-Reference.md  Home.md  Installation.md  Knowledge-Graph.md  Natural-Language-Intent.md  Quick-Start.md  Templates.md  _Sidebar.md
(+38 files in other folders)
