[project]
name = "archeon"
version = "0.1.0"
description = "Glyph-based architecture notation system for AI-orchestrated software development"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pytest>=7.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
]

[project.scripts]
archeon = "archeon.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archeon"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["archeon/tests"]
python_files = ["test_*.py"]
